--- a/Servicos/src/main/resources/application.properties
+++ b/Servicos/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/servicosDB?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=000000
+spring.datasource.password=230303*Mel
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
